--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     display: flex;
     max-height: 100vh;
@@ -39,6 +35,8 @@ body {
     background-color: white;
     border: 1px solid #ddd;
     cursor: pointer;
+    text-decoration: none;
+    color: black;
 }
 
 .forum-topic.active {
@@ -51,6 +49,12 @@ body {
     background-color: #e9ebee;
 }
 
+.forum-container.unsafe-space .add-post-form {
+    display: none;
+}
+.forum-container.unsafe-space .forum-posts {
+    height: 75vh;
+}
 .forum-posts {
     height: 65vh;
     overflow-y: scroll;
