Finished SQL Injection

--- a/views/sql-injection/index.ejs
+++ b/views/sql-injection/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../common/head.ejs') %>
-    <link rel="stylesheet" href="/css/sql-injection.css"> 
+    <link rel="stylesheet" href="/css/sql-injection/index.css"> 
 </head>
 
 <body>
